--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>2.7.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
