--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>JAVAEE-02</module>
         <module>core</module>
         <module>db</module>
+        <module>javaee-aspect</module>
     </modules>
 
     <build>
@@ -54,7 +55,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.5</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
