--- a/JAVAEE-01/pom.xml
+++ b/JAVAEE-01/pom.xml
@@ -69,6 +69,16 @@
             <version>8.0.16</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 
